Done with the initial changes I committed to for carbon_allotropes.html and states_of_water.html. Discovered and fixed an issue in the CSS that caused the top of the description to be cut off if the description was too long: notes class is no longer a flexbox itself. Now time to look into animations and things.

--- a/molecule-page.css
+++ b/molecule-page.css
@@ -1,5 +1,7 @@
 @charset "utf-8";
 /* CSS Document */
+/* Authors: Justin Fairbourn and Scott Ensign */
+/* Created at Utah State University with support from the Chemistry department and the Center for Innovative Design and Instruction.*/
 body {
 	font-family: Arial;
 	background-color: darkgray;
@@ -17,7 +19,7 @@ header {
 h3, h4 {
 	margin-top: 5px;
 	margin-bottom: 5px;
-	align-self: center;
+	text-align: center;
 }
 img {
 	align-self: center;
@@ -29,6 +31,7 @@ main {
 	flex-direction: row;
 	justify-content: center;
 	align-content: center;
+	position: relative;
 }
 p {
 	margin-top: 5px;
@@ -67,14 +70,13 @@ sup {
 	justify-content: center;
 }
 .notes {
-	align-self: flex-start;
 	align-content: center;
-	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	height: 100%;
 	max-width: 320px;
 	max-height: 637px;
-	overflow: scroll;
+	overflow: auto;
 	padding: 10px;
 }
 .multi {
